--- a/src/stundenplan/Uebersicht.form
+++ b/src/stundenplan/Uebersicht.form
@@ -27,7 +27,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="btn_block_new" min="-2" pref="195" max="-2" attributes="0"/>
+                      <Component id="btn_action_new" min="-2" pref="195" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btn_subject_new" min="-2" pref="195" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
@@ -41,7 +41,7 @@
                               <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
                               <Component id="btn_splan_new" min="-2" pref="195" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
-                              <Component id="btn_splan_latest" min="-2" pref="195" max="-2" attributes="0"/>
+                              <Component id="btn_splan_prev" min="-2" pref="195" max="-2" attributes="0"/>
                           </Group>
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
                               <Component id="jSeparator3" alignment="0" max="32767" attributes="0"/>
@@ -49,7 +49,7 @@
                                   <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="btn_teacher_splan" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="btn_teacher_show" alignment="0" max="32767" attributes="0"/>
                                       <Component id="btn_teacher_edit" alignment="0" max="32767" attributes="0"/>
                                       <Component id="btn_teacher_new" alignment="0" max="32767" attributes="0"/>
                                   </Group>
@@ -59,8 +59,8 @@
                                   <Component id="jScrollPane2" min="-2" pref="150" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jButton4" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jButton3" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="btn_class_show" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="btn_class_edit" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="btn_class_new" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -82,7 +82,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
                   <Component id="btn_splan_new" alignment="2" min="-2" max="-2" attributes="0"/>
-                  <Component id="btn_splan_latest" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="btn_splan_prev" alignment="2" min="-2" max="-2" attributes="0"/>
                   <Component id="btn_splan_current" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="110" max="32767" attributes="0"/>
@@ -91,28 +91,28 @@
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="jScrollPane1" alignment="1" pref="0" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="btn_teacher_splan" min="-2" max="-2" attributes="0"/>
+                      <Component id="btn_teacher_show" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btn_teacher_edit" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btn_teacher_new" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="jButton4" min="-2" max="-2" attributes="0"/>
+                      <Component id="btn_class_show" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jButton3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btn_class_edit" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btn_class_new" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jSeparator1" alignment="1" min="-2" pref="126" max="-2" attributes="0"/>
                   <Component id="jScrollPane2" alignment="1" max="32767" attributes="0"/>
+                  <Component id="jSeparator1" alignment="1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jSeparator2" min="-2" pref="10" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btn_close" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btn_block_new" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Component id="btn_action_new" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="btn_subject_new" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -131,17 +131,11 @@
     </Component>
     <Component class="javax.swing.JButton" name="btn_close">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="11" style="0"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Programm beenden"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btn_class_new">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="11" style="0"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Neue Klasse anlegen"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[180, 40]"/>
@@ -159,9 +153,6 @@
     </Component>
     <Component class="javax.swing.JButton" name="btn_teacher_new">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="11" style="0"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Neue Lehrer anlegen"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[180, 40]"/>
@@ -176,9 +167,6 @@
     </Component>
     <Component class="javax.swing.JButton" name="btn_splan_current">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="11" style="0"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Aktuelle Stundenpl&#xe4;ne ansehen"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[200, 30]"/>
@@ -193,9 +181,6 @@
     </Component>
     <Component class="javax.swing.JButton" name="btn_splan_new">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="11" style="0"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Neuen Stundenplan anlegen"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[200, 30]"/>
@@ -208,11 +193,8 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn_splan_latest">
+    <Component class="javax.swing.JButton" name="btn_splan_prev">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="11" style="0"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="vergangene Stundenpl&#xe4;ne"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[200, 30]"/>
@@ -225,7 +207,7 @@
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_splan_latestActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_splan_prevActionPerformed"/>
       </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
@@ -260,7 +242,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JList" name="lst_classes">
+        <Component class="javax.swing.JList" name="lst_class">
           <Properties>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
               <StringArray count="5">
@@ -277,9 +259,6 @@
     </Container>
     <Component class="javax.swing.JButton" name="btn_teacher_edit">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="11" style="0"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Lehrer bearbeiten"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[180, 40]"/>
@@ -292,11 +271,8 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn_teacher_splan">
+    <Component class="javax.swing.JButton" name="btn_teacher_show">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="11" style="0"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Stundenplan anzeigen"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[180, 40]"/>
@@ -314,11 +290,8 @@
         <Property name="orientation" type="int" value="1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton3">
+    <Component class="javax.swing.JButton" name="btn_class_edit">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="11" style="0"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Klasse bearbeiten"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[180, 40]"/>
@@ -331,11 +304,8 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton4">
+    <Component class="javax.swing.JButton" name="btn_class_show">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="11" style="0"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Stundenplan anzeigen"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[180, 40]"/>
@@ -352,12 +322,9 @@
     </Component>
     <Component class="javax.swing.JSeparator" name="jSeparator3">
     </Component>
-    <Component class="javax.swing.JButton" name="btn_block_new">
+    <Component class="javax.swing.JButton" name="btn_action_new">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="11" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Neuer Unterrichtsblock"/>
+        <Property name="text" type="java.lang.String" value="Neue Aktivit&#xe4;t"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[200, 30]"/>
         </Property>
@@ -371,9 +338,6 @@
     </Component>
     <Component class="javax.swing.JButton" name="btn_subject_new">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="11" style="0"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Neues Fach"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[200, 30]"/>
