--- a/src/stundenplan/oberflaechen/LehrerEditGUI.form
+++ b/src/stundenplan/oberflaechen/LehrerEditGUI.form
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <Properties>
+    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Lehrer bearbeiten"/>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[410, 310]"/>
+    </Property>
+  </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="2"/>
   </SyntheticProperties>
@@ -54,9 +61,9 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="btn_teacher_save" min="-2" pref="94" max="-2" attributes="0"/>
+                              <Component id="btn_lehrer_abbrechen" min="-2" pref="94" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="btn_teacher_save1" min="-2" pref="271" max="-2" attributes="0"/>
+                              <Component id="btn_lehrer_speichern" min="-2" pref="271" max="-2" attributes="0"/>
                           </Group>
                           <Component id="lbl_teacher_edit" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
@@ -66,8 +73,8 @@
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="txt_teacher_name" max="32767" attributes="0"/>
-                                  <Component id="txt_teacher_short" min="-2" pref="180" max="-2" attributes="0"/>
+                                  <Component id="txt_lehrer_name" max="32767" attributes="0"/>
+                                  <Component id="txt_lehrer_kuerzel" min="-2" pref="180" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
@@ -95,13 +102,13 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lbl_lehrer_edit_name" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txt_teacher_name" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txt_lehrer_name" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lbl_lehrer_edit_short" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txt_teacher_short" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txt_lehrer_kuerzel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Component id="jScrollPane1" alignment="0" min="-2" pref="92" max="-2" attributes="0"/>
@@ -126,8 +133,8 @@
               <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btn_teacher_save" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btn_teacher_save1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btn_lehrer_abbrechen" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btn_lehrer_speichern" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -151,7 +158,7 @@
         <Property name="text" type="java.lang.String" value="Name"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="txt_teacher_name">
+    <Component class="javax.swing.JTextField" name="txt_lehrer_name">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="12" style="0"/>
@@ -161,7 +168,7 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="txt_teacher_short">
+    <Component class="javax.swing.JTextField" name="txt_lehrer_kuerzel">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="12" style="0"/>
@@ -179,7 +186,7 @@
         <Property name="text" type="java.lang.String" value="K&#xfc;rzel"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn_teacher_save">
+    <Component class="javax.swing.JButton" name="btn_lehrer_abbrechen">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="11" style="0"/>
@@ -196,7 +203,7 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn_teacher_save1">
+    <Component class="javax.swing.JButton" name="btn_lehrer_speichern">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="12" style="0"/>
@@ -220,7 +227,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JList" name="jList1">
+        <Component class="javax.swing.JList" name="lst_lehrer_faecher">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="12" style="0"/>
